[project]
name = "wrf-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
    "cattrs>=25.3.0",
    "click>=8.3.0",
    "dash>=2.18.0",
    "dash-leaflet>=1.0.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pillow>=11.0.0",
    "plotly>=5.24.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
wrf-download = "wrf_tools.wrf_client:main"
wrf-annotate = "wrf_tools.annotation:cli"

[tool.setuptools]
packages = ["wrf_tools"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
